samples/_failures_safe/1761708394_08a942_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40cc2b6f.c: In function ‘main’:
./samples/SAFE/__tmp_40cc2b6f.c:155:34: error: expected ‘)’ at end of input
  155 |         buffer_free(&decompressed
      |                    ~             ^
      |                                  )
./samples/SAFE/__tmp_40cc2b6f.c:155:9: error: expected declaration or statement at end of input
  155 |         buffer_free(&decompressed
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_40cc2b6f.c:155:9: error: expected declaration or statement at end of input
